# pynrrd

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  README.rst  RUN_testNrrd.sh  dwi_nrrd.py  index.html  nrrd.py  params.json  parsers.py  pyproject.toml  reader.py  requirements.txt  setup.cfg  setup.py  testDWIs.sh  testNrrd.py  writer.py
.github/workflows/: lint.yml  pythonpublish.yml  test.yml
docs/: Makefile  make.bat  requirements.txt  requirements22.txt
docs/source/: conf.py  docutils.conf  examples.rst  getting-started.rst  index.rst  pynrrd.rst  user-guide.rst
docs/source/background/: about.rst  datatypes.rst  fields.rst  how-to-use.rst  index-ordering.rst
docs/source/reference/: formatting.rst  parsing.rst  reading.rst  writing.rst
nrrd/: __init__.py  dwi.py  errors.py  formatters.py  parsers.py  reader.py  types.py  writer.py
nrrd/tests/: BallBinary30x30x30.raw  __init__.py  test1d_ascii.nrrd  test_formatting.py  test_nrrd.py  test_parsing.py  test_reading.py  test_writing.py  util.py
nrrd/tests/data/: BallBinary30x30x30_byteskip_minus_five.nhdr  BallBinary30x30x30_byteskip_minus_one.nhdr  BallBinary30x30x30_byteskip_minus_one_nifti.nhdr  BallBinary30x30x30_gz_byteskip_minus_one.nrrd  BallBinary30x30x30_nifti.nhdr  (+4 more)
tests/: BallBinary30x30x30.nhdr  BallBinary30x30x30.nrrd  BallBinary30x30x30_bz2.nrrd  BallBinary30x30x30_gz.nrrd  BallBinary30x30x30_gz_lineskip.nrrd  test2d_ascii.nrrd  test_dwi.py  test_dwi.sh  test_dwi_nrrd.py  test_dwi_nrrd.sh  test_nrrd.py
(+1 files in other folders)
