[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynrrd"
dynamic = ["version"]
description = "Pure python module for reading and writing NRRD files."
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Maarten Everts", email = "me@nn8.nl" },
    { name = "Addison Elliott", email = "addison.elliott@gmail.com" }
]
keywords = ["nrrd", "teem", "image", "processing", "file", "format"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["numpy >= 1.21", "typing_extensions"]

[project.optional-dependencies]
dev = ["build", "pre-commit", "pytest"]

[project.urls]
Homepage = "https://github.com/mhe/pynrrd"
Documentation = "https://pynrrd.readthedocs.io/en/stable"
Tracker = "https://github.com/mhe/pynrrd/issues"

[tool.setuptools.dynamic]
version = { attr = "nrrd._version.__version__" }

[tool.setuptools.packages]
find = { exclude = ["*.tests", "*.tests.*", "tests.*", "tests"] }
